<resources>
    <string name="app_name">UF1_Proyecto</string>
    <string name="titulo">ALGOFLIX</string>
    <string name="sent">Sent</string>
    <string name="inbox">Inbox</string>
    <string name="help">Help</string>
    <string name="empezar">Empezar</string>
    <string name="pregunta">¿Qué género te apetece ver?</string>
    <string name="comedia">Comedia</string>
    <string name="drama">Drama</string>
    <string name="terror">Terror</string>
    <string name="suspense">Suspense</string>
    <string name="romance">Romance</string>
    <string name="heroes">Héroes</string>
    <string name="resultado">La película que vas a ver es...</string>
    <string name="accion">Acción</string>
    <string name="cienciaFiccion">Ciencia Ficción</string>
    <string name="genero">Género</string>
    <string name="generoRand">Género Aleatorio</string>
    <string name="phone">638 25 12 93</string>
    <string name="email">algoflix@gmail.com</string>
    <string name="twitter">@AlgoFlix</string>
    <string name="consulta">Para cualquier duda o consulta sobre la aplicación puede contactar con nosotros por</string>
</resources>