<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseFragment"
        tools:context=".ChooseFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:background="@color/red"
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

        <!-- Contenedor para los fragmentos dinámicos -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="56dp" />

        <ImageView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_marginBottom="390dp"
            android:background="@color/noColor"
            android:src="@drawable/texto"
            android:textSize="50dp"
            android:textStyle="bold"
            />


        <ImageView
            android:id="@+id/fondo"
            android:layout_width="420dp"
            android:layout_height="843dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta"
            android:layout_gravity="center"
            android:layout_marginBottom="325dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />


        <ImageView
            android:id="@+id/imgComedia"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/comedia"
            android:layout_gravity="center"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="250dp"
            />

        <Button
            android:id="@+id/btnComedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/comedia"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="185dp"
            />

        <ImageView
            android:id="@+id/imgDrama"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/drama"
            android:layout_gravity="center"
            android:layout_marginBottom="250dp"
            android:layout_marginLeft="90dp"
            />

        <Button
            android:id="@+id/btnDrama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/drama"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="185dp"
            />

        <ImageView
            android:id="@+id/imgTerror"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/terror"
            android:layout_gravity="center"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="89dp"
            />

        <Button
            android:id="@+id/btnTerror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:layout_marginBottom="18dp"
            android:text="@string/terror"
            android:layout_marginRight="90dp"
            />

        <ImageView
            android:id="@+id/imgSuspense"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/suspense"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="89dp"
            />

        <Button
            android:id="@+id/btnSuspense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:layout_marginBottom="18dp"
            android:textSize="20dp"
            android:text="@string/suspense"
            android:layout_marginLeft="90dp"
            />

        <ImageView
            android:id="@+id/imgAccion"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/accion"
            android:layout_gravity="center"
            android:layout_marginRight="90dp"
            android:layout_marginTop="65dp"
            />

        <Button
            android:id="@+id/btnAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="137dp"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/accion"
            android:layout_marginRight="90dp"
            />

        <ImageView
            android:id="@+id/imgCienciaFiccion"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/ciencia"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="65dp"
            />

        <Button
            android:id="@+id/btnCienciaFiccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="137dp"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/cienciaFiccion"
            android:layout_marginLeft="90dp"
            />

        <ImageView
            android:id="@+id/imgHeroes"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/heroes"
            android:layout_gravity="center"
            android:layout_marginRight="90dp"
            android:layout_marginTop="225dp"
            />

        <Button
            android:id="@+id/btnHeroes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="300dp"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/heroes"
            android:layout_marginRight="90dp"
            />

        <ImageView
            android:id="@+id/imgRomance"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:src="@drawable/romance"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="225dp"
            />

        <Button
            android:id="@+id/btnRomance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="300dp"
            android:backgroundTint="@color/red"
            android:textSize="20dp"
            android:text="@string/romance"
            android:layout_marginLeft="90dp"
            />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/botton_navigation"
            android:background="@color/black"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_bottom"
            app:itemTextColor="@color/selector_bottom_nav_item"
            app:itemIconTint="@color/selector_bottom_nav_item"
            />
    </FrameLayout>
</ScrollView>
