<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/helpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HelpFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:background="@color/red"
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />

    <ImageView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_marginBottom="335dp"
        android:background="@color/noColor"
        android:src="@drawable/texto"
        android:textSize="50dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consulta"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="100dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:src="@android:drawable/ic_menu_call" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_marginBottom="100dp"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="100dp"
        android:layout_height="50dp"
        android:src="@android:drawable/ic_dialog_email"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginLeft="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/twitter"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botton_navigation"
        android:background="@color/black"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_bottom"
        app:itemTextColor="@color/selector_bottom_nav_item"
        app:itemIconTint="@color/selector_bottom_nav_item"
        />
</FrameLayout>